# macro

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/request/: index.html
api/response/: index.html
api/server/: index.html
docs/: index.md
docs/api/: request.md  response.md  server.md
examples/: file.py  hello.py
macro/: __init__.py  request.py  response.py  server.py
search/: search_index.json
