[project]
name = "macro"
version = "0.1.0"
description = "ASGI server"
authors = [
    {name = "externref",email = "shiva02939@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "attrs (>=25.3.0,<26.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
ruff = "^0.11.0"
uvicorn = "^0.34.0"
asgiref = "^3.8.1"
mkdocs-material = {extras = ["imaging"], version = "^9.6.8"}
mkdocstrings-python = "^1.16.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
